--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
-- import_tasks: brew.yml
+# Comment tasks to disable.
 - import_tasks: chrome.yml
-- import_tasks: git.yml
 - import_tasks: vim.yml
 - import_tasks: tmux.yml
