--- a/setup.yml
+++ b/setup.yml
@@ -4,5 +4,11 @@
   connection: local
   roles:
     - macos
+  vars_prompt:
+    - name: "world_dir"
+      prompt: "[ optional ] Where do you want to organize your projects? defaults to '~/world/'"
+      default: "/home/world"
+    - name: "dotfiles_repo"
+      prompt: "[ optional ] What is your dotfiles https git uri"
 
 
