--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
+# [ Required ]
+- import_tasks: dotfiles.yml
+
+# [ Optional ]
 # Comment tasks to disable.
 - import_tasks: chrome.yml
 - import_tasks: vim.yml
 - import_tasks: tmux.yml
 - import_tasks: iterm2.yml
-- import_tasks: dotfiles.yml
+
