--- a/roles/macos/tasks/dotfiles.yml
+++ b/roles/macos/tasks/dotfiles.yml
@@ -1,5 +1,9 @@
 ---
 - block:
+    - name: Include dotfiles variables.
+      include_vars:
+        file: dotfiles.yml
+
     - name: Clone dotfiles repo
       git:
         repo: "{{ dotfiles_repo }}"
