--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -9,4 +9,5 @@
 - import_tasks: tmux.yml
 - import_tasks: iterm2.yml
 
-- import_tasks: git.conf.yml
+- import_tasks: conf.d/git.yml
+- import_tasks: conf.d/vim.yml
