add bash_profile and bashrc confs

--- a/roles/macos/vars/dotfiles.yml
+++ b/roles/macos/vars/dotfiles.yml
@@ -2,3 +2,5 @@
 dotfiles_dir: "{{ world_dir }}/dotfiles"
 dotfiles_gitconfig: "{{ dotfiles_dir }}/.gitconfig"
 dotfiles_vimrc: "{{ dotfiles_dir }}/.vimrc"
+dotfiles_bashrc: "{{ dotfiles_dir }}/.bashrc"
+dotfiles_bash_profile: "{{ dotfiles_dir }}/.bash_profile"
