--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -13,3 +13,5 @@
 - import_tasks: conf.d/vim.yml
 - import_tasks: conf.d/bash.yml
 - import_tasks: conf.d/tmux.yml
+- import_tasks: conf.d/ideavim.yml
+- import_tasks: conf.d/screen.yml
