--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -8,6 +8,7 @@
 - import_tasks: vim.yml
 - import_tasks: tmux.yml
 - import_tasks: iterm2.yml
+- import_tasks: shiftit.yml
 
 - import_tasks: conf.d/git.yml
 - import_tasks: conf.d/vim.yml
