fix dotfiles in ansible's non interactive mode
var prompt defaults to None in ansible's non interactive mode, was
only handling empty string before

--- a/setup.yml
+++ b/setup.yml
@@ -12,5 +12,6 @@
     - name: "dotfiles_repo"
       prompt: "[ optional ] What is your dotfiles https git uri"
       private: no
+      default: ""
 
 
