add aws cli module

--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -11,6 +11,7 @@
 - import_tasks: shiftit.yml
 - import_tasks: dropbox.yml
 - import_tasks: firefox.yml
+- import_tasks: awscli.yml
 
 - import_tasks: conf.d/git.yml
 - import_tasks: conf.d/vim.yml
