add nodejs and npjs modules

--- a/roles/macos/tasks/vim.yml
+++ b/roles/macos/tasks/vim.yml
@@ -1,6 +1,11 @@
 ---
-- name: Install vim
-  homebrew:
-    options: -with-override-system-vi
-    name: vim
-    state: latest
+- block:
+  - name: Install vim
+    homebrew:
+      options: -with-override-system-vi
+      name: vim
+      state: latest
+
+  tags:
+    - cli
+    - vim
