--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -13,6 +13,7 @@
 - import_tasks: firefox.yml
 - import_tasks: awscli.yml
 - import_tasks: virtualenv.yml
+- import_tasks: node.yml
 
 - import_tasks: conf.d/git.yml
 - import_tasks: conf.d/vim.yml
