--- a/roles/macos/vars/main.yml
+++ b/roles/macos/vars/main.yml
@@ -1,3 +1,15 @@
 ---
 applications_dir: /Applications
 dotfiles_dir: "{{ world_dir }}/dotfiles"
+managed_dotfiles:
+  - bash_profile
+  - bashrc
+  - inputrc
+  - vimrc
+  - ideavimrc
+  - screenrc
+  - tmux.conf
+  - macos
+  - osx
+  - gitignore
+  - gitconfig
