update brew package installs to one task

--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -4,14 +4,14 @@
 
 # [ Optional ] Comment tasks to disable.
 - import_tasks: conf.d/dotfiles.yml
-
 - import_tasks: chrome.yml
 - import_tasks: vim.yml
-- import_tasks: tmux.yml
 - import_tasks: iterm2.yml
 - import_tasks: shiftit.yml
 - import_tasks: dropbox.yml
 - import_tasks: firefox.yml
 - import_tasks: awscli.yml
 - import_tasks: virtualenv.yml
-- import_tasks: node.yml
+
+# [ Optional ] Comment tasks to disable.
+- import_tasks: brew_packages.yml
